<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:orientation="vertical"
        tools:context="com.alexytorres.ensiedt.ScheduleActivity"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/activity_schedule_prec_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/prev_week"
                android:textSize="16sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/activity_schedule_next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/next_week"
                android:textSize="16sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp" />
        </LinearLayout>

        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
            android:layout_width="match_parent"
            android:layout_height="593dp"
            android:id="@+id/activity_schedule_image" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_schedule_logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/logout"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />
    </LinearLayout>
</ScrollView>